  
- Thu Aug 04 2011 (Boris)
  - enabled logging for 59_Weather.pm

- Thu Dec 01 2011 (Martin F.)
  - Move JsonList from contrib to main modules. Jsonlist output is optimized
    and now be more structured.

- Sun Jan 29 2012 (Maz Rashid)
  - Improving 10_EIB.pm by introducing Get and interpreting received value according 
    to the selected model (based on datapoint types.)
  - Introduced documentation for TUL / EIB modules.  

- Fr Feb 24 2012 (Willi)
  - New modules TRX for RFXCOM RFXtrx transceiver

- So May 20 2012 (M. Fischer)
  - Added support for a cleaner installation of pgm2 via updatefhem.

- Sa May 26 2012 (M. Fischer)
  - Added new command backup to separate this feature from updatefhem.

- Thu May 31 2012 (M. Fischer)
  - Added new global attribute <backupsymlink>

- Fri Jun 01 2012 (M. Fischer)
  - Added new global attribute <backupcmd>

- Sat Jun 02 2012 (M. Fischer)
  - Added new global attribute <backup_before_update>
  - Backuproutine from updatefhem removed. updatefhem use the command backup from now.

- Sun Jun 03 2012 (M. Fischer)
  - Added new global attribute <exclude_from_update>
  - Added new parameter <changed> to updatefhem

- Sun Jun 17 2012 (M. Fischer)
  - CULflash routine from updatefhem removed. CULflash is a standalone module from now.

- Sat Aug 11 2012 (M. Fischer)
  - Added new module IPCAM
  
- Tue Feb 19 2013 (Johannes)
  - added new Javascript Frontend based on ExtJS (by Johannes)
  - added example Setup SQL and configuration for SQLite
  - extended the MySQL Setup SQL to use 512 characters in EVENT column

- Sun Jun 23 2013 (UliM)
  - Added new module "remotecontrol"
  
- Sun Jul 14 2013 (Alexus)
  - Added new module "EGPM2LAN" and "EGPM"
  
- Fri Jul 26 2013 (Dirk)
  - Added new module "I2C_BMP180"
  
- Fri Jul 26 2013 (A. Vogt alias baumrasen)
  - Added new module "WWO"
  
- Mon Jan 13 2014 (A. Schulz alias hexenmeister)
  - Added new module "SYSMON"
  